# cnc-microscope

./: .gitignore  .pre-commit-config.yaml  CAD.FCStd  LICENSE.txt  README.md  pyproject.toml  requirements.txt  sandbox.py
dependencies/: dev.txt  main.txt  requirements_build.txt  requirements_dev.txt
src/CameraApp/: API.py  GLOBALS.py  __init__.py  __main__.py  foveated_compression.py  sandbox.py
tests/: mypy.ini  profiling.py
